<resources>
    <string name="app_name">Foodbodi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fodimap">Fodimap</string>
    <string name="title_reservation">Calories intake</string>
    <string name="title_profile">Profile</string>
    <string name="not_updated">Not updated</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_to">Continue</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="gender_question">What is your gender</string>
    <string name="your_basic">Your information</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Your Age</string>
    <string name="height">Your Height (inch)</string>
    <string name="weight">Your Weight (kg)</string>
    <string name="target_weight">Goal Weight</string>
    <string name="next">Next</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>

    <string name="title">Title</string>
    <string name="company_name">Name of company</string>
    <string name="registration_no">Registration No.</string>
    <string name="representative_name">Name of representative</string>
    <string name="category">Category</string>
    <string name="hour_example">ex: 13:00</string>
    <string name="subtitle">Subtitle</string>
    <string name="price_symbol">$</string>
    <string name="add_kcalo">kcalo</string>
    <string name="add_menu">Add Menu</string>
    <string name="address">Address</string>
    <string name="open_hour">Open hour</string>
    <string name="close_hour">Close hour</string>
    <string name="restaurant">Restaurant</string>
    <string name="food_truct">Food Truck</string>
    <string name="menu">Menu</string>
    <string name="money_format">$ %1$.1f</string>
    <string name="kcalo_format">%1$.0f kcalo</string>
    <string name="work_hour_format">%1$s ~ %2$s</string>

    <string name="company_information">Company information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>

    <string name="google_oauth_server_client_id">
        367920415756-os0qdcn3mirkrqlklgj02u9bb96gb5nj.apps.googleusercontent.com
    </string>
    <string name="google_map_key">AIzaSyDeNkAwx8vvuc5VkBAzeTptnq4KSPgjJmU</string>
    <string name="facebook_app_id">727165344366619</string>
    <string name="fb_login_protocol_scheme">fb727165344366619</string>

    <string name="register_restaurant_successfully">Your restaurant information is submitted and being processed by our
        team.
    </string>
    <string name="wating_for_approval_msg">We will let you know when it is approved. (This may take up to 3 days)
    </string>

    <string name="title_location_permission">Location permission required</string>
    <string name="text_location_permission">To have better user experience, Foodbodi need you allow to share the
        location
    </string>

    <string name="workout_remind_msg">Try to reach 10,000 steps or 30 minutes of walking time everyday</string>
    <string name="welcaome_msg">Transformation to a great looking body will become dream come true with daily calorie
        adjustment!
    </string>
    <string name="search_box_hint">Restaurant name, food name</string>
    <string name="restaurant_name_hint">(Restaurant name)</string>
    <string name="restaurant_address_hint">(Restaurant address)</string>

    <string name="tab_chat_fragment">Chat</string>
    <string name="tab_Name_Of_Foods_fragment">Name of foods</string>
    <string name="title_activity_update_calories">UpdateCaloriesActivity</string>
    <string name="step_count_help_text_google_fit">Your step count is fetched from your Google Fit account</string>
    <string name="step_count_help_text_samsung_health">Your step count is fetched from your Samsung Health account</string>
    <string name="calories_configuration">Calories Configuration</string>
    <string name="calo_threshold_helptext">Maximum amount of calories (kcal) you want to intake per day: </string>
    <string name="for_you">For You</string>
    <string name="split_character"> | </string>
    <string name="type_new_comment">Type new comment</string>
    <string name="welcome">Welcome</string>
    <string name="get_start">GET START</string>
    <string name="welcome_message">Transformation to a great looking body will become dream come true with daily
        calorie
    </string>
    <string name="delete_restaurant_title">Do you want to delete this restaurant ?</string>

</resources>
