<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/menu"
            android:textSize="@dimen/text_large"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <LinearLayout
            android:weightSum="10"
            android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="6"
                android:layout_width="0dp" android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_food_name"
                    android:hint="@string/title"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText 
                        android:id="@+id/input_food_price"
                        android:hint="@string/price_symbol"
                        android:minWidth="80dp"
                        android:inputType="numberDecimal"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <EditText
                        android:id="@+id/input_food_kcalo"
                        android:hint="@string/add_kcalo"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </LinearLayout>
            
        </LinearLayout>
        <FrameLayout
                android:layout_weight="4"
                android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/image_food_image"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_gravity="center"
                    android:src="@drawable/cast_ic_notification_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </FrameLayout>
    </LinearLayout>
    <Button
            android:id="@+id/btn_add_food"
            android:text="@string/add_menu"
            android:background="@color/colorPrimary"
            android:textColor="@color/White"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_added_food"
            android:layout_width="match_parent"
            android:minHeight="400dp"
            android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
