<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_medium"
        android:orientation="vertical"
        tools:context=".NotifyWaitingForApproval">
    <ImageView
            android:id="@+id/img_new_product"
            android:layout_width="match_parent"
               android:layout_marginTop="130sp"
               android:src="@mipmap/new_product"
               android:layout_marginBottom="@dimen/text_large"
               android:layout_height="wrap_content"/>
    <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            android:text="@string/register_restaurant_successfully"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_title"
            />

    <TextView
            android:layout_marginBottom="@dimen/text_title"
            android:text="@string/wating_for_approval_msg"
            android:textSize="@dimen/text_medium"
            android:textAlignment="center"
            android:padding="@dimen/text_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_continue"
            android:background="@drawable/fb_button"
            android:text="@string/continue_to"
            android:textColor="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>