<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/text_large"
        tools:context=".GettingStartedActivity">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView
                android:layout_marginTop="@dimen/text_title"
                android:layout_width="match_parent" android:layout_height="wrap_content"
            android:src="@drawable/welcome_image"
        />
        <TextView
                android:layout_marginTop="@dimen/text_large"
                android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/welcome"
                  android:textStyle="bold"
                  android:textAlignment="center"
                  android:textSize="@dimen/text_title"
                  android:fontFamily="@font/sf_pro_text_light"

        />
        <TextView
                android:textSize="@dimen/text_medium"
                android:layout_marginTop="@dimen/text_medium"
                android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/welcome_message"
                  android:textAlignment="center"

        />
       <Button android:layout_marginTop="@dimen/text_title"
               android:layout_width="wrap_content" android:layout_height="match_parent"
        android:layout_gravity="center"
               android:id="@+id/get_start"
               android:background="@drawable/oval_button"
               android:text="@string/get_start"
               android:textColor="@color/White"
               android:paddingRight="@dimen/text_large"
               android:paddingLeft="@dimen/text_large"
       />
    </LinearLayout>

</ScrollView>